<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="344dp"
        android:layout_height="417dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/button_heart_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_status" />

    <TextView
        android:id="@+id/textView_status"
        android:layout_width="216dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/app_name_better"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initheart"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/viewFinder"
        app:layout_constraintStart_toStartOf="@+id/viewFinder" />

    <TextView
        android:id="@+id/text_view_respiratory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initresp"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_heart"
        app:layout_constraintStart_toStartOf="@+id/viewFinder" />

    <Button
        android:id="@+id/button_heart_rate"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Heart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_respiratory_rate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_respiratory_rate"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Breathe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_heart_rate" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        app:layout_constraintBottom_toBottomOf="@+id/viewFinder"
        app:layout_constraintEnd_toEndOf="@+id/viewFinder"
        app:layout_constraintStart_toStartOf="@+id/viewFinder"
        app:layout_constraintTop_toBottomOf="@+id/viewFinder" /> <!-- android:visibility="gone" -->

</androidx.constraintlayout.widget.ConstraintLayout>
